--- a/.github/workflows/build-core-ut.yaml
+++ b/.github/workflows/build-core-ut.yaml
@@ -35,14 +35,13 @@ jobs:
     timeout-minutes: 90
     strategy:
       matrix:
-        go-version: [1.23.10]
         runner: [arc-runner-set-ilogtail]
       fail-fast: true
     steps:
-      - name: Set up Go ${{ matrix.go-version }}
+      - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: ${{ matrix.go-version }}
+          go-version: 1.23.10
 
       - name: Check out code
         uses: actions/checkout@v4
