Test: add ut for pb parser

--- a/core/unittest/processor/CMakeLists.txt
+++ b/core/unittest/processor/CMakeLists.txt
@@ -65,6 +65,9 @@ if (LINUX)
     target_link_libraries(parse_container_log_benchmark ${UT_BASE_TARGET})
 endif()
 
+add_executable(processor_parse_from_pb_native_unittest ProcessorParseFromPBNativeUnittest.cpp)
+target_link_libraries(processor_parse_from_pb_native_unittest unittest_base)
+
 include(GoogleTest)
 gtest_discover_tests(processor_split_log_string_native_unittest)
 gtest_discover_tests(processor_split_multiline_log_string_native_unittest)
@@ -77,6 +80,7 @@ gtest_discover_tests(processor_parse_delimiter_native_unittest)
 gtest_discover_tests(processor_filter_native_unittest)
 gtest_discover_tests(processor_desensitize_native_unittest)
 gtest_discover_tests(processor_merge_multiline_log_native_unittest)
+gtest_discover_tests(processor_parse_from_pb_native_unittest)
 if (LINUX)
     gtest_discover_tests(processor_prom_relabel_metric_native_unittest)
     gtest_discover_tests(processor_prom_parse_metric_native_unittest)
