--- a/core/unittest/common/CMakeLists.txt
+++ b/core/unittest/common/CMakeLists.txt
@@ -17,7 +17,8 @@ project(common_unittest)
 
 add_executable(common_simple_utils_unittest SimpleUtilsUnittest.cpp
         FileSystemUtilUnittest.h
-        DevInodeUnittest.h)
+        DevInodeUnittest.h
+        TimeUtilUnittest.h)
 target_link_libraries(common_simple_utils_unittest ${UT_BASE_TARGET})
 
 add_executable(common_logfileoperator_unittest LogFileOperatorUnittest.cpp)
