--- a/core/unittest/apm/CMakeLists.txt
+++ b/core/unittest/apm/CMakeLists.txt
@@ -12,3 +12,4 @@ endfunction()
 add_unittest(attach_manager_unittest AttachManagerUnittest.cpp)
 add_unittest(package_manager_unittest PackageManagerUnittest.cpp)
 add_unittest(apm_inject_config_unittest ApmInjectConfigUnittest.cpp)
+add_unittest(apm_inject_runner_unittest ApmInjectRunnerUnittest.cpp)
