--- a/core/unittest/CMakeLists.txt
+++ b/core/unittest/CMakeLists.txt
@@ -58,6 +58,7 @@ macro(add_core_subdir)
     add_subdirectory(route)
     add_subdirectory(task_pipeline)
     add_subdirectory(host_monitor)
+    add_subdirectory(forward)
     if (ENABLE_ENTERPRISE)
         add_subdirectory(shennong)
     endif()
