--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -18,6 +18,7 @@ on:
   push:
     branches:
       - main
+      - fix-selfmonitor-crash
     paths-ignore:
       - 'docs/**'
       - 'example_config/**'
