--- a/core/unittest/serializer/CMakeLists.txt
+++ b/core/unittest/serializer/CMakeLists.txt
@@ -24,7 +24,11 @@ target_link_libraries(sls_serializer_unittest ${UT_BASE_TARGET})
 add_executable(json_serializer_unittest JsonSerializerUnittest.cpp)
 target_link_libraries(json_serializer_unittest ${UT_BASE_TARGET})
 
+add_executable(kafka_serializer_unittest KafkaSerializerUnittest.cpp)
+target_link_libraries(kafka_serializer_unittest ${UT_BASE_TARGET})
+
 include(GoogleTest)
 gtest_discover_tests(serializer_unittest)
 gtest_discover_tests(sls_serializer_unittest)
 gtest_discover_tests(json_serializer_unittest)
+gtest_discover_tests(kafka_serializer_unittest)
