move enterprise dir

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -232,8 +232,8 @@ set(EBPF_DIRVER_TARGET "eBPFDriver")
 add_subdirectory(ebpf/driver)
 if(MSVC)
     if (ENABLE_ENTERPRISE)
-        add_subdirectory(daemon)
-        add_subdirectory(installer)
+        add_subdirectory(windows/daemon)
+        add_subdirectory(windows/installer)
     endif()
 endif()
 
