--- a/core/unittest/host_monitor/CMakeLists.txt
+++ b/core/unittest/host_monitor/CMakeLists.txt
@@ -40,6 +40,9 @@ endif()
 add_executable(mem_collector_unittest MemCollectorUnittest.cpp)
 target_link_libraries(mem_collector_unittest ${UT_BASE_TARGET})
 
+add_executable(disk_collector_unittest DiskCollectorUnittest.cpp)
+target_link_libraries(disk_collector_unittest ${UT_BASE_TARGET})
+
 include(GoogleTest)
 gtest_discover_tests(process_entity_collector_unittest)
 gtest_discover_tests(host_monitor_input_runner_unittest)
@@ -51,3 +54,4 @@ if (LINUX)
 endif()
 gtest_discover_tests(system_collector_unittest)
 gtest_discover_tests(mem_collector_unittest)
+gtest_discover_tests(disk_collector_unittest)
