--- a/core/unittest/ebpf/CMakeLists.txt
+++ b/core/unittest/ebpf/CMakeLists.txt
@@ -37,6 +37,7 @@ add_unittest(common_util_unittest CommonUtilUnittest.cpp)
 add_unittest(trace_id_benchmark TraceIdBenchmark.cpp)
 add_unittest(networkobserver_event_unittest NetworkObserverEventUnittest.cpp)
 add_unittest(networkobserver_unittest NetworkObserverUnittest.cpp)
+add_unittest(network_observer_config_update_unittest NetworkObserverConfigUpdateUnittest.cpp)
 add_unittest(connection_unittest ConnectionUnittest.cpp)
 add_unittest(connection_manager_unittest ConnectionManagerUnittest.cpp)
 add_unittest(process_cache_unittest ProcessCacheUnittest.cpp)
@@ -49,6 +50,7 @@ add_unittest(process_execve_retryable_event_unittest ProcessExecveRetryableEvent
 add_unittest(process_exit_retryable_event_unittest ProcessExitRetryableEventUnittest.cpp)
 add_unittest(process_sync_retryable_event_unittest ProcessSyncRetryableEventUnittest.cpp)
 add_unittest(retryable_event_unittest RetryableEventUnittest.cpp)
+add_unittest(http_retryable_event_unittest HttpRetryableEventUnittest.cpp)
 
 add_driver_unittest(id_allocator_unittest IdAllocatorUnittest.cpp)
 add_driver_unittest(ebpf_driver_log_unittest EBPFDriverLogUnittest.cpp)
