--- a/core/unittest/ebpf/CMakeLists.txt
+++ b/core/unittest/ebpf/CMakeLists.txt
@@ -49,6 +49,7 @@ add_unittest(process_execve_retryable_event_unittest ProcessExecveRetryableEvent
 add_unittest(process_exit_retryable_event_unittest ProcessExitRetryableEventUnittest.cpp)
 add_unittest(process_sync_retryable_event_unittest ProcessSyncRetryableEventUnittest.cpp)
 add_unittest(file_retryable_event_unittest FileRetryableEventUnittest.cpp)
+add_unittest(file_security_manager_unittest FileSecurityManagerUnittest.cpp)
 add_unittest(retryable_event_unittest RetryableEventUnittest.cpp)
 
 add_driver_unittest(id_allocator_unittest IdAllocatorUnittest.cpp)
