feat: add file security events collection (#2292)
* add file retry events and adjust lock structure to fix eBPF file data loss

* add eBPF functionality to collect file read and write operations

* dynamically adjust the MaxWaitTime of pollperfbuffer

* adjust the data reporting format

* add ut to increase test coverage

--- a/core/unittest/ebpf/CMakeLists.txt
+++ b/core/unittest/ebpf/CMakeLists.txt
@@ -48,6 +48,8 @@ add_unittest(process_clone_retryable_event_unittest ProcessCloneRetryableEventUn
 add_unittest(process_execve_retryable_event_unittest ProcessExecveRetryableEventUnittest.cpp)
 add_unittest(process_exit_retryable_event_unittest ProcessExitRetryableEventUnittest.cpp)
 add_unittest(process_sync_retryable_event_unittest ProcessSyncRetryableEventUnittest.cpp)
+add_unittest(file_retryable_event_unittest FileRetryableEventUnittest.cpp)
+add_unittest(file_security_manager_unittest FileSecurityManagerUnittest.cpp)
 add_unittest(retryable_event_unittest RetryableEventUnittest.cpp)
 
 add_driver_unittest(id_allocator_unittest IdAllocatorUnittest.cpp)
