fix UT warnings

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -64,8 +64,8 @@ add_definitions(-DXXH_DISPATCH_AVX512=0)
 
 # Default C/CXX flags.
 if (UNIX)
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -fpic -fPIC -D_LARGEFILE64_SOURCE")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall -fpic -fPIC -D_LARGEFILE64_SOURCE")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror -fpic -fPIC -D_LARGEFILE64_SOURCE")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall -Werror -fpic -fPIC -D_LARGEFILE64_SOURCE")
     if (NOT WITHOUTGDB)
         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -ggdb")
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -ggdb")
@@ -196,12 +196,14 @@ if (BUILD_LOGTAIL)
     if (ENABLE_ENTERPRISE)
         if (UNIX)
             add_executable(${LOGTAIL_TARGET} enterprise_logtail.cpp ${SRC_FILES})
+            target_compile_options(${LOGTAIL_TARGET} PRIVATE -Werror)
         elseif (MSVC)
             add_executable(${LOGTAIL_TARGET} enterprise_logtail_windows.cpp ${SRC_FILES})
         endif ()
     else ()
         if (UNIX)
             add_executable(${LOGTAIL_TARGET} logtail.cpp ${SRC_FILES})
+            target_compile_options(${LOGTAIL_TARGET} PRIVATE -Werror)
         elseif (MSVC)
             add_executable(${LOGTAIL_TARGET} logtail_windows.cpp ${SRC_FILES})
         endif ()
@@ -215,12 +217,14 @@ if (BUILD_LOGTAIL_SHARED_LIBRARY)
     if (ENABLE_ENTERPRISE)
         if (UNIX)
             add_library(${LOGTAIL_TARGET} SHARED enterprise_logtail.cpp ${SRC_FILES})
+            target_compile_options(${LOGTAIL_TARGET} PRIVATE -fPIC -Werror)
         elseif (MSVC)
             add_library(${LOGTAIL_TARGET} SHARED enterprise_logtail_windows.cpp ${SRC_FILES})
         endif ()
     else ()
         if (UNIX)
             add_library(${LOGTAIL_TARGET} SHARED logtail.cpp ${SRC_FILES})
+            target_compile_options(${LOGTAIL_TARGET} PRIVATE -fPIC -Werror)
         elseif (MSVC)
             add_library(${LOGTAIL_TARGET} SHARED logtail_windows.cpp ${SRC_FILES})
         endif ()
@@ -265,7 +269,8 @@ if (BUILD_LOGTAIL_UT)
             endforeach()
         endif()
     endfunction()
-    delete_gcda_files(".")
+    # clean .gcda files in build directory
+    delete_gcda_files("${CMAKE_BINARY_DIR}")
     include(CTest)
     enable_testing()
     add_subdirectory("${UNITTEST_PATH}" "${CMAKE_BINARY_DIR}/unittest")
