--- a/core/unittest/host_monitor/CMakeLists.txt
+++ b/core/unittest/host_monitor/CMakeLists.txt
@@ -42,6 +42,8 @@ if (LINUX)
 endif()
 add_executable(mem_collector_unittest MemCollectorUnittest.cpp)
 target_link_libraries(mem_collector_unittest ${UT_BASE_TARGET})
+add_executable(process_collector_unittest ProcessCollectorUnittest.cpp)
+target_link_libraries(process_collector_unittest ${UT_BASE_TARGET})
 
 include(GoogleTest)
 gtest_discover_tests(process_entity_collector_unittest)
@@ -54,4 +56,5 @@ if (LINUX)
 endif()
 gtest_discover_tests(system_collector_unittest)
 gtest_discover_tests(mem_collector_unittest)
+gtest_discover_tests(process_collector_unittest)
 gtest_discover_tests(net_collector_unittest)
