feat: add disk collector (#2310)
* feat: add disk collector

Signed-off-by: chenshiyan <chenshiyan@linux.alibaba.com>

* bugfix: fix disk collector compile error

Signed-off-by: chenshiyan <chenshiyan@linux.alibaba.com>

* bugfix: fix disk collector error check and resource leak

Signed-off-by: chenshiyan <chenshiyan@linux.alibaba.com>

* bugfix: fix static check eror

Signed-off-by: chenshiyan <chenshiyan@linux.alibaba.com>

* bugfix: delete unused functions in disk collector

Signed-off-by: chenshiyan <chenshiyan@linux.alibaba.com>

* bugfix: add static for new variable

Signed-off-by: chenshiyan <chenshiyan@linux.alibaba.com>

* bugfix: modify function and variables names

Signed-off-by: chenshiyan <chenshiyan@linux.alibaba.com>

* bugfix: fix wrong parameter naming

Signed-off-by: chenshiyan <chenshiyan@linux.alibaba.com>

* bugfix: fix compile error

Signed-off-by: chenshiyan <chenshiyan@linux.alibaba.com>

* bugfix: fix staticCheck error

Signed-off-by: chenshiyan <chenshiyan@linux.alibaba.com>

---------

Signed-off-by: chenshiyan <chenshiyan@linux.alibaba.com>

--- a/core/unittest/host_monitor/CMakeLists.txt
+++ b/core/unittest/host_monitor/CMakeLists.txt
@@ -45,6 +45,9 @@ target_link_libraries(mem_collector_unittest ${UT_BASE_TARGET})
 add_executable(process_collector_unittest ProcessCollectorUnittest.cpp)
 target_link_libraries(process_collector_unittest ${UT_BASE_TARGET})
 
+add_executable(disk_collector_unittest DiskCollectorUnittest.cpp)
+target_link_libraries(disk_collector_unittest ${UT_BASE_TARGET})
+
 include(GoogleTest)
 gtest_discover_tests(process_entity_collector_unittest)
 gtest_discover_tests(host_monitor_input_runner_unittest)
@@ -56,5 +59,6 @@ if (LINUX)
 endif()
 gtest_discover_tests(system_collector_unittest)
 gtest_discover_tests(mem_collector_unittest)
+gtest_discover_tests(disk_collector_unittest)
 gtest_discover_tests(process_collector_unittest)
 gtest_discover_tests(net_collector_unittest)
