--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -38,6 +38,9 @@ cmake_dependent_option(ENABLE_ADDRESS_SANITIZER "Enable address sanitizer" ON "C
 set(PROVIDER_PATH ${CMAKE_CURRENT_SOURCE_DIR}/provider CACHE PATH "Path to the provider module") # external provider path can be set with -DPROVIDER_PATH
 set(UNITTEST_PATH ${CMAKE_CURRENT_SOURCE_DIR}/unittest CACHE PATH "Path to the unittest module") # external unittest path can be set with -DUNITTEST_PATH
 
+# Option to enable/disable treating warnings as errors
+option(ENABLE_WERROR "Treat warnings as errors" ON)
+
 if (BUILD_LOGTAIL_SHARED_LIBRARY AND WITHSPL)
     message(FATEL_ERROR, "Generating logtail shared library is not supported to be linked with SPL. WITHSPL should be set OFF.")
     return()
@@ -64,8 +67,12 @@ add_definitions(-DXXH_DISPATCH_AVX512=0)
 
 # Default C/CXX flags.
 if (UNIX)
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror -fpic -fPIC -D_LARGEFILE64_SOURCE")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall -Werror -fpic -fPIC -D_LARGEFILE64_SOURCE")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -fpic -fPIC -D_LARGEFILE64_SOURCE")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall -fpic -fPIC -D_LARGEFILE64_SOURCE")
+    if (ENABLE_WERROR)
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror")
+    endif()
     if (NOT WITHOUTGDB)
         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -ggdb")
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -ggdb")
@@ -196,14 +203,12 @@ if (BUILD_LOGTAIL)
     if (ENABLE_ENTERPRISE)
         if (UNIX)
             add_executable(${LOGTAIL_TARGET} enterprise_logtail.cpp ${SRC_FILES})
-            target_compile_options(${LOGTAIL_TARGET} PRIVATE -Werror)
         elseif (MSVC)
             add_executable(${LOGTAIL_TARGET} enterprise_logtail_windows.cpp ${SRC_FILES})
         endif ()
     else ()
         if (UNIX)
             add_executable(${LOGTAIL_TARGET} logtail.cpp ${SRC_FILES})
-            target_compile_options(${LOGTAIL_TARGET} PRIVATE -Werror)
         elseif (MSVC)
             add_executable(${LOGTAIL_TARGET} logtail_windows.cpp ${SRC_FILES})
         endif ()
@@ -217,14 +222,14 @@ if (BUILD_LOGTAIL_SHARED_LIBRARY)
     if (ENABLE_ENTERPRISE)
         if (UNIX)
             add_library(${LOGTAIL_TARGET} SHARED enterprise_logtail.cpp ${SRC_FILES})
-            target_compile_options(${LOGTAIL_TARGET} PRIVATE -fPIC -Werror)
+            target_compile_options(${LOGTAIL_TARGET} PRIVATE -fPIC)
         elseif (MSVC)
             add_library(${LOGTAIL_TARGET} SHARED enterprise_logtail_windows.cpp ${SRC_FILES})
         endif ()
     else ()
         if (UNIX)
             add_library(${LOGTAIL_TARGET} SHARED logtail.cpp ${SRC_FILES})
-            target_compile_options(${LOGTAIL_TARGET} PRIVATE -fPIC -Werror)
+            target_compile_options(${LOGTAIL_TARGET} PRIVATE -fPIC)
         elseif (MSVC)
             add_library(${LOGTAIL_TARGET} SHARED logtail_windows.cpp ${SRC_FILES})
         endif ()
