Build: Add sshd to the devcontainer for AI tools access (#2327)
* Build: Add sshd to the devcontainer for AI tools access

* chore: add .cursorignore file and update gen_env.sh for public key handling

--- a/.devcontainer/Dockerfile.lldb
+++ b/.devcontainer/Dockerfile.lldb
@@ -18,6 +18,17 @@ ARG USERNAME=admin
 ARG USER_PASSWORD
 USER root
 
+RUN wget https://ilogtail-community-edition.oss-cn-shanghai.aliyuncs.com/toolchain/glibc-2.18.tar.gz && \
+    tar -zxvf glibc-2.18.tar.gz && \
+    cd glibc-2.18 && \
+    mkdir build && \
+    cd build && \
+    ../configure --prefix=/usr && \
+    make -j$(nproc) && \
+    make install && \
+    cd ../ && \
+    rm -fr glibc-2.18*
+    
 RUN yum -y install openssh-server && \
     ssh-keygen -A
     
