--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,23 +5,30 @@
       "USERNAME": "${localEnv:USER}"
     }
   },
-  "initializeCommand": ".devcontainer/gen_env.sh",
+  "initializeCommand": "cd .devcontainer && bash ./gen_env.sh",
   "privileged": true,
   "mounts": [
     { "source": "/sys", "target": "/sys", "type": "bind" },
     { "source": "/", "target": "/logtail_host", "type": "bind" }
   ],
-  "runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined" ],
+  "runArgs": [
+    "--cap-add=SYS_PTRACE",
+    "--security-opt", "seccomp=unconfined"
+  ],
   "onCreateCommand": "sudo chown -R $(id -un):$(id -gn) /root",
+  "postCreateCommand": "sudo /usr/sbin/sshd",
   "customizations": {
     "vscode": {
       "extensions": [
         "golang.Go",
         "ms-vscode.cpptools-extension-pack",
+        "ms-vscode.cmake-tools",
         "llvm-vs-code-extensions.vscode-clangd",
         "DavidAnson.vscode-markdownlint",
         "redhat.vscode-yaml",
-        "bmalehorn.shell-syntax"
+        "bmalehorn.shell-syntax",
+        "eamodio.gitlens",
+        "github.vscode-pull-request-github"
       ]
     }
   }
