Build: Resolve all compilation warnings and modernize CMake dependency management (#2340)
* fix UT warnings

* Enhance CMake configuration by adding an option to treat warnings as errors (ENABLE_WERROR). Update library linking to use find_library for better dependency management and error handling. Adjust eBPF driver compilation flags based on ENABLE_WERROR setting. Clean up unused variable warnings in unit tests.

* Refactor CMake library linking to use find_library for improved dependency management. Update linking macros for re2, tcmalloc, cityhash, gflags, jsoncpp, yaml-cpp, lz4, zlib, zstd, curl, unwind, leveldb, and protobuf to handle debug and release libraries more effectively. Enhance error handling for missing libraries.

* Remove unused variable declarations in NetworkObserverConfigUpdateUnittest to clean up the code and improve readability.

* Update dependencies in CMake configuration by adding protobuf, while reorganizing existing entries for improved clarity and management.

* fix build on windows

* Refactor CMake dependency management by replacing link_directories with CMAKE_LIBRARY_PATH for improved library path handling.

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -38,6 +38,9 @@ cmake_dependent_option(ENABLE_ADDRESS_SANITIZER "Enable address sanitizer" ON "C
 set(PROVIDER_PATH ${CMAKE_CURRENT_SOURCE_DIR}/provider CACHE PATH "Path to the provider module") # external provider path can be set with -DPROVIDER_PATH
 set(UNITTEST_PATH ${CMAKE_CURRENT_SOURCE_DIR}/unittest CACHE PATH "Path to the unittest module") # external unittest path can be set with -DUNITTEST_PATH
 
+# Option to enable/disable treating warnings as errors
+option(ENABLE_WERROR "Treat warnings as errors" ON)
+
 if (BUILD_LOGTAIL_SHARED_LIBRARY AND WITHSPL)
     message(FATEL_ERROR, "Generating logtail shared library is not supported to be linked with SPL. WITHSPL should be set OFF.")
     return()
@@ -66,6 +69,10 @@ add_definitions(-DXXH_DISPATCH_AVX512=0)
 if (UNIX)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -fpic -fPIC -D_LARGEFILE64_SOURCE")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall -fpic -fPIC -D_LARGEFILE64_SOURCE")
+    if (ENABLE_WERROR)
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror")
+    endif()
     if (NOT WITHOUTGDB)
         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -ggdb")
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -ggdb")
@@ -215,12 +222,14 @@ if (BUILD_LOGTAIL_SHARED_LIBRARY)
     if (ENABLE_ENTERPRISE)
         if (UNIX)
             add_library(${LOGTAIL_TARGET} SHARED enterprise_logtail.cpp ${SRC_FILES})
+            target_compile_options(${LOGTAIL_TARGET} PRIVATE -fPIC)
         elseif (MSVC)
             add_library(${LOGTAIL_TARGET} SHARED enterprise_logtail_windows.cpp ${SRC_FILES})
         endif ()
     else ()
         if (UNIX)
             add_library(${LOGTAIL_TARGET} SHARED logtail.cpp ${SRC_FILES})
+            target_compile_options(${LOGTAIL_TARGET} PRIVATE -fPIC)
         elseif (MSVC)
             add_library(${LOGTAIL_TARGET} SHARED logtail_windows.cpp ${SRC_FILES})
         endif ()
@@ -265,7 +274,8 @@ if (BUILD_LOGTAIL_UT)
             endforeach()
         endif()
     endfunction()
-    delete_gcda_files(".")
+    # clean .gcda files in build directory
+    delete_gcda_files("${CMAKE_BINARY_DIR}")
     include(CTest)
     enable_testing()
     add_subdirectory("${UNITTEST_PATH}" "${CMAKE_BINARY_DIR}/unittest")
