--- a/core/unittest/common/CMakeLists.txt
+++ b/core/unittest/common/CMakeLists.txt
@@ -48,6 +48,9 @@ target_link_libraries(yaml_util_unittest ${UT_BASE_TARGET})
 add_executable(safe_queue_unittest SafeQueueUnittest.cpp)
 target_link_libraries(safe_queue_unittest ${UT_BASE_TARGET})
 
+add_executable(env_util_unittest EnvUtilUnittest.cpp)
+target_link_libraries(env_util_unittest ${UT_BASE_TARGET})
+
 add_executable(http_request_timer_event_unittest timer/HttpRequestTimerEventUnittest.cpp)
 target_link_libraries(http_request_timer_event_unittest ${UT_BASE_TARGET})
 
@@ -80,6 +83,7 @@ gtest_discover_tests(common_machine_info_util_unittest)
 gtest_discover_tests(encoding_converter_unittest)
 gtest_discover_tests(yaml_util_unittest)
 gtest_discover_tests(safe_queue_unittest)
+gtest_discover_tests(env_util_unittest)
 gtest_discover_tests(http_request_timer_event_unittest)
 gtest_discover_tests(timer_unittest)
 gtest_discover_tests(curl_unittest)
