update cmake in ebpf driver

--- a/core/ebpf/driver/CMakeLists.txt
+++ b/core/ebpf/driver/CMakeLists.txt
@@ -49,8 +49,7 @@ if (LINUX)
 
     add_library(${EBPF_DIRVER_TARGET} SHARED ${LIB_SOURCE_FILES})
     target_link_options(${EBPF_DIRVER_TARGET} PRIVATE "-Wl,-rpath=.:${DEFAULT_DEPS_ROOT}/lib")
-    target_link_libraries(${EBPF_DIRVER_TARGET} coolbpf)
-    target_link_libraries(${EBPF_DIRVER_TARGET} profiler)
+    target_link_libraries(${EBPF_DIRVER_TARGET} coolbpf ${DEFAULT_DEPS_ROOT}/lib/libprofiler.so)
     add_dependencies(${EBPF_DIRVER_TARGET} install_coolbpf)
     target_compile_options(${EBPF_DIRVER_TARGET} PRIVATE -fPIC)
 endif ()
