--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -70,11 +70,6 @@ jobs:
     permissions:
       packages: write
     steps:
-      - name: Set up Go 1.19
-        uses: actions/setup-go@v4
-        with:
-          go-version: 1.19
-
       - name: Check out code
         uses: actions/checkout@v4
         with:
@@ -89,15 +84,18 @@ jobs:
           echo "Current commit: $(git rev-parse HEAD)"
 
       - name: Build Image
-        env:
-          BUILD_LOGTAIL_UT: OFF
-          ENABLE_COMPATIBLE_MODE: ON
-          ENABLE_STATIC_LINK_CRT: ON
-          WITHOUTGDB: ON
-          MAKE_JOBS: 16
-          WITHSPL: ON
         run: |
-          make e2edocker
+          docker build \
+            --tag aliyun/loongcollector:0.0.1 \
+            --file ./docker/Dockerfile_edge_linux \
+            --build-arg VERSION=0.0.1 \
+            --build-arg BUILD_LOGTAIL_UT=OFF \
+            --build-arg ENABLE_COMPATIBLE_MODE=ON \
+            --build-arg ENABLE_STATIC_LINK_CRT=ON \
+            --build-arg WITHOUTGDB=ON \
+            --build-arg WITHSPL=ON \
+            --build-arg MAKE_JOBS=16 \
+            .
 
       - name: Export Image to Tar
         run: docker save -o image.tar aliyun/loongcollector:0.0.1
